// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tabs Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-1"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-2"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-3"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            id="tabs-4"
            role="tab"
            tabindex="0"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-5"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-6"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-7"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-8"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-9"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-10"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Show %d more items
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Tabs Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-1"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-2"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-3"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            id="tabs-4"
            role="tab"
            tabindex="0"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-5"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-6"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-7"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-8"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-9"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-10"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Show %d more items
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Tabs Default renders correctly with extra class name on items 1`] = `
<jest>
  <div
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link extra-class-1"
            href="/example"
            id="tabs-1"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link extra-class-2"
            href="/example"
            id="tabs-2"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Show %d more items
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Tabs Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-tabs custom-class custom-class--test"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-1"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-2"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-3"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            id="tabs-4"
            role="tab"
            tabindex="0"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-5"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-6"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-7"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-8"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-9"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-tabs__link"
            href="/example"
            id="tabs-10"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Show %d more items
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon ecl-icon--corner-arrow"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;
